<resources>
    <string name="app_name">Not A Try</string>
    <string name="battle_journal">Журнал боя:</string>
    <string name="type_of_attack">Тип воздействия</string>
    <string name="hint_shield_power">сила щита</string>
    <string name="hint_attack_power">сила воздействия</string>
    <string name="travel_coordinates">Координаты перемещения (0.0 - город)</string>
    <string name="travel_start_coords">начальные координаты</string>
    <string name="travel_end_coords">координаты цели</string>
    <string name="travel_basic_coords">0.0</string>
    <string name="travel_dusk_layer">Слой сумрака</string>
    <string name="travel_way_to_travel">Способ передвижения</string>
    <string name="travel_subject_time">субьективное время пути</string>
    <string name="travel_object_time">объективное время пути</string>
    <string name="travel_move_title">Экран для расчета времени перемещения</string>
    <string name="travel_help_title">Экран для расчета времени прибытия поддержки</string>
    <string name="travel_help_dusk_layer">На каком слое сумрака находится цель</string>
    <string name="button_check_damage">воздействие</string>
    <string name="button_scan_shields">скан щитов</string>
    <string name="button_export_character">экспортировать персонажа</string>
    <string name="button_import_character">импортировать персонажа</string>
    <string name="button_start_activity_shields">подготовка</string>
    <string name="button_start_activity_battle">бой</string>
    <string name="button_start_activity_travel">идти</string>
    <string name="button_magic_defence">маг</string>
    <string name="button_physic_defence">физ</string>
    <string name="button_mental_defence">мент</string>
    <string name="button_calculate_travel_time">рассчитать время пути</string>
    <string name="action_settings">паспорт игрока</string>
    <string name="action_import_export">импорт/экспорт</string>
    <string name="action_finish_battle">закончить бой</string>
    <string name="action_reset_reactions">восстановить реакции</string>
    <string name="action_use_reaction">использовать реакцию</string>
    <string name="table_column_name">Название</string>
    <string name="table_column_cost">у.е.</string>
    <string name="table_column_magic_defence">МЗ</string>
    <string name="table_column_physic_defence">ФЗ</string>
    <string name="table_column_mental_defence">Мент.</string>
    <string name="table_column_range">ЛЗ</string>
    <string name="pref_full_name_label">Полное имя</string>
    <string name="pref_full_name_key" translatable="false">full_name</string>
    <string name="pref_full_name_default" translatable="false">Вася Пупкин</string>
    <string name="pref_age_label">Возраст</string>
    <string name="pref_age_key" translatable="false">age</string>
    <string name="pref_age_default" translatable="false">18</string>
    <string name="pref_power_label">Запас силы</string>
    <string name="pref_power_key" translatable="false">power</string>
    <string name="pref_power_default" translatable="false">8</string>
    <string name="pref_side_label">Сторона силы</string>
    <string name="pref_side_key" translatable="false">side</string>
    <string name="pref_side_label_light">Свет</string>
    <string name="pref_side_light_value" translatable="false">свет</string>
    <string name="pref_side_label_dark">Тьма</string>
    <string name="pref_side_dark_value" translatable="false">тьма</string>
    <string name="pref_type_label">Тип иного</string>
    <string name="pref_type_key" translatable="false">type</string>
    <string name="pref_type_label_mag">Маг</string>
    <string name="pref_type_value_mag" translatable="false">маг</string>
    <string name="pref_type_label_healer">Целитель</string>
    <string name="pref_type_value_healer" translatable="false">целитель</string>
    <string name="pref_type_label_prophet">Пророк</string>
    <string name="pref_type_value_prophet" translatable="false">пророк</string>
    <string name="pref_type_label_incubus">Инкуб</string>
    <string name="pref_type_value_incubus" translatable="false">инкуб</string>
    <string name="pref_type_label_succubus">Суккуб</string>
    <string name="pref_type_value_succubus" translatable="false">суккуб</string>
    <string name="pref_type_label_flipflop">Перевертыш</string>
    <string name="pref_type_value_flipflop" translatable="false">перевертыш</string>
    <string name="pref_type_label_witch">Ведьма</string>
    <string name="pref_type_value_witch" translatable="false">ведьма</string>
    <string name="pref_type_label_witcher">Ведьмак</string>
    <string name="pref_type_value_witcher" translatable="false">ведьмак</string>
    <string name="pref_type_label_charmer">Ведунья</string>
    <string name="pref_type_value_charmer" translatable="false">ведунья</string>
    <string name="pref_type_label_sorcerer">Ведун</string>
    <string name="pref_type_value_sorcerer" translatable="false">ведун</string>
    <string name="pref_type_label_vampire">Вампир</string>
    <string name="pref_type_value_vampire" translatable="false">вампир</string>
    <string name="pref_type_label_werewolf">Оборотень</string>
    <string name="pref_type_value_werewolf" translatable="false">оборотень</string>
    <string name="pref_type_label_werewolf_mag">Оборотень-маг</string>
    <string name="pref_type_value_werewolf_mag" translatable="false">оборотень-маг</string>
    <string name="pref_level_label">Уровень иного</string>
    <string name="pref_level_key" translatable="false">level</string>
    <string name="pref_level_label_seven">7</string>
    <string name="pref_level_value_seven" translatable="false">7</string>
    <string name="pref_level_label_six">6</string>
    <string name="pref_level_value_six" translatable="false">6</string>
    <string name="pref_level_label_five">5</string>
    <string name="pref_level_value_five" translatable="false">5</string>
    <string name="pref_level_label_four">4</string>
    <string name="pref_level_value_four" translatable="false">4</string>
    <string name="pref_level_label_three">3</string>
    <string name="pref_level_value_three" translatable="false">3</string>
    <string name="pref_level_label_two">2</string>
    <string name="pref_level_value_two" translatable="false">2</string>
    <string name="pref_level_label_one">1</string>
    <string name="pref_level_value_one" translatable="false">1</string>
    <string name="pref_level_label_zero">высший</string>
    <string name="pref_level_value_zero" translatable="false">0</string>
    <string name="shields_mag_shield">Щит мага</string>
    <string name="shields_clean_mind">Чистый разум</string>
    <string name="shields_will_barrier">Барьер воли</string>
    <string name="shields_sphere_of_tranquility">Сфера спокойствия</string>
    <string name="shields_icecrown">Ледяная кора</string>
    <string name="shields_force_barrier">Силовой барьер</string>
    <string name="shields_concave_shield">Вогнутый щит</string>
    <string name="shields_sphere_of_negation">Сфера отрицания</string>
    <string name="shields_pair_shield">Спаренный щит</string>
    <string name="shields_cloack_of_darkness">Плащ тьмы</string>
    <string name="shields_rainbow_sphere">Радужная сфера</string>
    <string name="shields_highest_mag_shield">Высший щит мага</string>
    <string name="shields_big_rainbow_sphere">Большая радужная сфера</string>
    <string name="shields_protective_dome">Защитный купол</string>
    <string name="shields_crystal_shield">Хрустальный щит</string>
    <string name="spells_triple_blade">Тройное лезвие</string>
    <string name="spells_fireball">Файербол</string>
    <string name="spells_ice_block">Ледяная глыба</string>
    <string name="spells_pillar_of_fire">Столп огня (Подгорает)</string>
    <string name="spells_ring_of_fire">Кольцо огня</string>
    <string name="spells_wall_of_fire">Стена огня</string>
    <string name="spells_ring_of_ice">Кольцо холода</string>
    <string name="spells_blizzard">Близзард</string>
    <string name="spells_kiss_of_echidna">Поцелуй ехидны</string>
    <string name="spells_dark_rain">Черный дождь</string>
    <string name="spells_white_sword">Белый меч</string>
    <string name="spells_spear_of_suffering">Копье страданий</string>
    <string name="spells_spear_of_light">Копье света</string>
    <string name="spells_vacuum_blow">Вакуумный удар</string>
    <string name="spells_taiga">Тайга</string>
    <string name="spells_haze_transylvania">Марево Трансильвании</string>
    <string name="spells_sparkling_wall">Искрящаяся Стена</string>
    <string name="spells_lash_of_shaab">Плеть Шааба</string>
    <string name="spells_telekinesis">Телекинез</string>
    <string name="spells_press">Пресс</string>
    <string name="spells_shock">Шок</string>
    <string name="spells_gray_wolf">Серый волк</string>
    <string name="spells_fetters">Путы Захви</string>
    <string name="spells_gray_prayer">Серый молебен</string>
    <string name="spells_gray_prayer_mass">Серый молебен (массовое)</string>
    <string name="spells_freeze">Фриз</string>
    <string name="spells_ring_of_shaab">Кольцо Шааба</string>
    <string name="spells_triple_key">Тройной ключ</string>
    <string name="spells_mass_press">Масс пресс</string>
    <string name="spells_expropriation">Экспроприация</string>
    <string name="spells_socrates">Сократ</string>
    <string name="spells_morpheus">Морфей</string>
    <string name="spells_needle_of_fear">Игла страха</string>
    <string name="spells_long_tongue">Длинный язык</string>
    <string name="spells_suggestion">Внушение</string>
    <string name="spells_eye_removal">Отвод глаз</string>
    <string name="spells_stupor">Ступор</string>
    <string name="spells_opium">Опиум</string>
    <string name="spells_thanatos">Танатос</string>
    <string name="spells_dominate">Доминанта</string>
    <string name="spells_deimos">Деймос</string>
    <string name="attacks_beat">Бью</string>
    <string name="attacks_wound">Раню</string>
    <string name="attacks_scuffle">Свалка</string>
    <string name="attacks_stun">Оглушаю</string>
</resources>